# droidVNC-NG

./: .gitmodules  CONTRIBUTING.md  README.md  build.gradle  gradle.properties  playstore-banner.xcf  playstore-screenshot-1.xcf  playstore-screenshot-2.xcf  playstore-screenshot-3.xcf  settings.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  ci.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/net/christianbeier/droidvnc_ng/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/novnc/: app  core  vendor  vnc.html
app/src/main/cpp/: CMakeLists.txt  droidvnc-ng.c
app/src/main/java/net/christianbeier/droidvnc_ng/: ClientList.kt  Constants.java  ControlService.java  Defaults.kt  HotkeyBinding.java  INetIfData.java  IfCollector.java  InputPointerView.kt  InputRequestActivity.java  InputService.java  IntentHelper.java  ListenIfAdapter.java  MainActivity.java  MainService.java  MainServicePersistData.kt  MediaProjectionRequestActivity.java  MediaProjectionService.java  NetIfData.java  NetIfDataDecorator.java  NetIfDataDefaultNameDecorator.java  NetworkInterfaceTester.java  NotificationRequestActivity.java  OnBootReceiver.java  OnPackageReplacedReceiver.kt  ShareActivity.kt  Utils.kt  VNCKey.java  WebViewActivity.kt  WriteStorageRequestActivity.java
app/src/main/java/net/christianbeier/droidvnc_ng/ifaceutils/: INetIfData.java  IfCollector.java  NetIfData.java  NetIfDataDecorator.java  NetworkInterfaceTester.java
app/src/main/res/drawable/: ic_launcher_monochrome.xml
app/src/main/res/drawable-anydpi/: focus_highlight.xml  ic_launcher_monochrome.xml  ic_notification.xml  ic_notification_normal.xml  ic_notification_warn.xml
app/src/main/res/layout/: activity_main.xml  activity_webview.xml  row_connection.xml  spinner_row.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-television/: colors.xml  styles.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: app_config.xml  app_restrictions.xml  input_service_config.xml
app/src/main/res/xml-v30/: input_service_config.xml
app/src/main/res/xml-v34/: input_service_config.xml
app/src/test/java/net/christianbeier/droidvnc_ng/: ExampleUnitTest.java  MainActivityTest.java
doc/: Intent-Interface.md  Preseed-Preferences.md
doc/adr/: 0001-record-architecture-decisions.md  0002-implement-control-interface-for-3rd-party-apps-via-intents.md  0003-use-static-methods-in-request-activities-to-check-for-permissions-services.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/ja-JP/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
